plugins {
  id "java"

  alias libs.plugins.spotless
  alias libs.plugins.versions
  alias libs.plugins.grgit
  alias libs.plugins.nexusPublish
  alias libs.plugins.sonarQube
  alias libs.plugins.semverguru

  id "licensing-defaults"
  id "sonarqube-defaults"
}

group = gurkenlabs_group

allprojects {
  project.version += isTaggedRevision(project.version) ? "" : "-SNAPSHOT"
  project.getLogger().lifecycle("Set project '{}' version to '{}'.", project.name, project.version)
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(24)
  }
}

nexusPublishing {
  useStaging.set(isTaggedRevision(project.version))
  repositories {
    sonatype {
      username = project.findProperty('sonatypeUsername') ?: project.findProperty('OSSRH_USERNAME') ?: ''
      password = project.findProperty('sonatypePassword') ?: project.findProperty('OSSRH_PASSWORD') ?: ''
    }
  }
}
